objects/vlocity_cmt__AdServer__c.object
<CustomObject>
    <description>The Ad Server stores and delivers advertising content onto various platforms.</description>
    <fields>
        <fullName>vlocity_cmt__AdServerApplicationName__c</fullName>
        <description>The Ad Server Application Name is an arbitrary string identifying the Publisher&apos;s application.</description>
        <label>Ad Server Application Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AdServerNetworkIdentifier__c</fullName>
        <description>The Ad Server Network Id is used to identify the associated Publisher&apos;s network.</description>
        <externalId>true</externalId>
        <label>Ad Server Network Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AllowedAdPriorityTypes__c</fullName>
        <description>This will store the available Ad Types for the selected Ad Server. Examples : Standard, Sponsorship, Bulk, InHouse,Price Priority, Network.</description>
        <label>Allowed Ad Priority Types</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Sponsorship</fullName>
                </value>
                <value>
                    <fullName>Bulk</fullName>
                </value>
                <value>
                    <fullName>InHouse</fullName>
                </value>
                <value>
                    <fullName>Price_Priority</fullName>
                    <label>Price Priority</label>
                </value>
                <value>
                    <fullName>Network</fullName>
                </value>
                <value>
                    <fullName>Click_Tracking</fullName>
                    <label>Click Tracking</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__NamedCredentialReference__c</fullName>
        <description>This is the Placeholder for the Named Credential which stores Ad Server&apos;s authentication details.</description>
        <label>Named Credential Reference</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Ad Server</label>
    <listViews>
        <fullName>vlocity_cmt__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Ad Server Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ad Servers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>